
    HDFS-13120. Snapshot diff could be corrupted after concat. (xyao)

    HDFS-7959. WebHdfs logging is missing on Datanode (Kihwal Lee via sjlee)
    Backport HDFS-13126 by Erik Krogen.

    HDFS-10453. ReplicationMonitor thread could stuck for long time
    due to the race between replication and delete of same file in a
    large cluster. Contributed by He Xiaoqiao.

Release 2.7.5 - 2017-12-14

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-9153. Pretty-format the output for DFSIO. (Kai Zheng via wheat9)

    HDFS-8797. WebHdfsFileSystem creates too many connections for pread. (jing9)

    HDFS-12131. Add some of the FSNamesystem JMX values as metrics.
    (Erik Krogen via wang, shv)
    
    HDFS-12420. Add an option to disallow 'namenode format -force'.
    (Ajay Kumar via Arpit Agarwal, zhz)
    
    HDFS-10984. Expose nntop output as metrics. (Siddharth Wagle via xyao, zhz)

    HDFS-9259. Make SO_SNDBUF size configurable at DFSClient side for hdfs write
    scenario. (original patch Mingliang Liu via Ming Ma, branch-2.7 backport
    done under HDFS-12823, Erik Krogen via zhz).

    HDFS-12596. Add TestFsck#testFsckCorruptWhenOneReplicaIsCorrupt
    back to branch-2.7. (Xiao Chen)

  OPTIMIZATIONS

    HDFS-10711. Optimize FSPermissionChecker group membership check.
    (Daryn Sharp via kihwal)

    HDFS-12323. NameNode terminates after full GC thinking QJM unresponsive
    if full GC is much longer than timeout. (Erik Krogen via shv)

    HDFS-8829. Make SO_RCVBUF and SO_SNDBUF size configurable for
    DataTransferProtocol sockets and allow configuring auto-tuning (He Tianyi
    via Colin P. McCabe)

  BUG FIXES

    HDFS-12157. Do fsyncDirectory(..) outside of FSDataset lock.
    (Vinayakumar B. via kihwal)

    HDFS-9107. Prevent NN's unrecoverable death spiral after full GC (Daryn
    Sharp via Colin P. McCabe)

    HDFS-10738. Fix
    TestRefreshUserMappings.testRefreshSuperUserGroupsConfiguration